// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cols should accept className 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      >
        <div
          class="flex gap-x-4 test"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Cols should render children 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      >
        <div
          class="flex gap-x-4"
        >
          Test
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cols should render div 1`] = `
<div>
  <div
    class="dark"
  >
    <div
      class="className bg-dark-2 dark:bg-dark-dark-2 text-primary dark:text-dark-primary text-c3 lg:text-c4"
    >
      <div
        data-testid="container"
      >
        <div
          class="flex gap-x-4"
        />
      </div>
    </div>
  </div>
</div>
`;
